--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.7",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.4",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
+    "export-to-csv": "^1.4.0",
     "framer-motion": "^12.27.1",
     "lucide-react": "^0.562.0",
+    "material-react-table": "^3.2.1",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.5",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.3"
   },
